# scratches

./: Poetry Notes..rtf  commands for push to new repo  decorators.py  decorators_.py  gitignore.txt  logger_module.py  logger_module_.py  logging_example.py  loguru.py  matplotlib1.py  pandas_snippet.py  pathlib_not strings.py  poetry1.py  progress_bars.py  py_mongo.py  ring-it-together.py  selenium2.py  selenium_template.py  selenium_usage.py  soup_playwright.py  sqlite3_snippet.py  user_agent.txt  useragents fake notes.rtf  util_playwright.py  venv commands.py
Creating personal access token GH.rtfd/: TXT.rtf
logger_module/: main.py
logging_module/: main.py
logging_module/utils/: log_module.py
movies template/: README.md  main.py  pyproject.toml
movies template/data/: movies.csv  movies.db  text_html.txt
movies template/utils/: selenium_template.py
sqlite3_tutorial/: duckdb.py  sqlite3.py
utils/: util.py  util_selenium.py
utils/utils/: util.py  util_selenium.py
