[tool.poetry]
name = "movies"
version = "0.1.0"
description = "scraping Rotten Tomatoes"
authors = ["Dan Nelson <danelson@nwi.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyarrow = "^15.0.0"
pandas = "^2.2.0"
requests = "^2.31.0"
bs4 = "^0.0.2"
fake-useragent = "^1.4.0"
selenium = "^4.17.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
